--- a/src/components/css/Header.module.css
+++ b/src/components/css/Header.module.css
@@ -7,7 +7,7 @@ Body {
 }
 h1,h2,h3{
     margin: 0.5rem 0;
-    color:white;
+    
 }
 h1{
     font-size: 1.5rem;
@@ -28,6 +28,13 @@ a {
 .col_2{
     flex:2; 
 }
+.button_badge{
+    background-color:rgb(255, 0, 0);
+    border:none;
+    color: rgb(255, 255, 255);
+    width: 1.5rem;
+    
+}
 
 .flex_block_center{
     display: flex;
@@ -36,6 +43,6 @@ a {
     background-color:rgb(0, 0, 68);
     padding:0.7rem;
     margin:0.5rem;
-    border-radius: 0.5rem;
+    
     
 }
